--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,4 @@ theme: jekyll-theme-cayman
 title: Welcome
 name: Gunnvaldr Pope
 description: Words go here
+permalink: /blog/:year/:month/:day/:title
