--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,11 @@
 #
 
 # Name of your site (displayed in the header)
-name: Gunnvaldr Pope
+name: Gunnvaldr
+title: Gunnvaldr
 
 # Short bio or description (displayed in the header)
-description: 
+description: Random thoughts and musings
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars1.githubusercontent.com/u/52542209?s=460&v=4
@@ -37,7 +38,7 @@ footer-links:
 disqus: gunnvaldr
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics:
+google_analytics: UA-145392921-1
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
@@ -73,9 +74,10 @@ sass:
   style: :expanded # You might prefer to minify using :compressed
 
 # Use the following plug-ins
-gems:
+plugins:
   - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
   - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
+  - jemoji
 
 # Exclude these files from your production _site
 exclude:
