--- a/_config.yml
+++ b/_config.yml
@@ -79,6 +79,10 @@ plugins:
   - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
   - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
   - jemoji
+  - jekyll-relative-links
+relative_links:
+  enabled: true
+  collections: true
 
 # Exclude these files from your production _site
 exclude:
