--- a/_config.yml
+++ b/_config.yml
@@ -20,15 +20,15 @@ avatar: https://avatars1.githubusercontent.com/u/52542209?s=460&v=4
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
-  facebook:
+  email: me@gunnvaldr.me
+  facebook: gunnvaldr.pope.3
   flickr:
   github: gunnvaldr
   instagram:
   linkedin:
   pinterest:
   rss: meh # just type anything here for a working RSS icon
-  twitter: 
+  twitter: GunnvaldrP
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
