--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,8 @@ avatar: https://avatars1.githubusercontent.com/u/52542209?s=460&v=4
 # Flags below are optional
 #
 
+parse_block_html: true
+
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
@@ -30,7 +32,7 @@ footer-links:
   rss: meh # just type anything here for a working RSS icon
   twitter: GunnvaldrP
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube: # channel/<your_long_string> or user/<user-name>
+  youtube: channel/UCNIPohQx8vt0yAs7IiRKRZA # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
 
 
